--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,15 @@
 /* navigation */
 .nav{
 	width:100%;
+	border-top:1px solid #222;
+	border-bottom:1px solid #222;
 }
+
 .gnb{
-	width:100%;
+	width:800px;
+	margin:0 auto;
 }
+
 .gnb::after{
 	content:"";
 	clear:both;
@@ -13,6 +18,7 @@
 	
 /* depth1 - li*/
 .dep1{
+	position:relative;
 	float:left;
 	width:25%;
 }
@@ -25,15 +31,26 @@
 	color:#fff;
 	text-align:center;
 }
+
 /* depth2 - ul*/
 .dep2{
-	display:none;
+	/* display:none; */
+	position:absolute;
+	width:100%;
+	border:1px solid #222;
+	border-top:0;
 }
+
 .dep2 li{
 
 }
 .dep2 a{
-
+	display:block;
+	padding:10px 5px;
+	border-bottom:1px solid #222;
+}
+.dep2 li:last-child a{
+	border-bottom:0;
 }
 /* depth - hover */
 .dep1 > a:hover{
@@ -41,5 +58,15 @@
 	background-color:#fff;
 	color:#222;
 	font-weight:bold;
-
+}
+/* Depth2 - hover */
+.dep2 li:hover a{
+	background-color:rgba(0,0,0,.5);
+	color:#fff
+	font-weight:bold;
+	text-shadow:2px 2px 2px rgba(0,0,0,.5);
+}
+/* 뎁스1에 마우스 hover시 뎁스2 보이게 처리 */
+.dep1:hover .dep2{
+	display:block;
 }
